
- round step buttons along the top light in dim yellow to indicate which steps in the currently visible measure have notes set? and
- when ALT is held (to switch octaves), round track buttons on the right side light to indicate which octaves have notes set?
- copy/paste using the top row of step view buttons: ALT+step button copies that measure, keep holding ALT and press another step button to paste the copied steps into the second step view.  Keep holding ALT and press a third, 4th, 5th, etc. step button to paste the copied steps into additional step views.  Release ALT without pressing a second step button to cancel out without pasting.
- bugfix for drum track switching
----------------------------------------------------------
Trigger steps from another track:
http://midibox.org/forums/topic/19410-step-trigger/?p=169253
----------------------------------------------------------
FTS for Random Generator
http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?p=169562
----------------------------------------------------------
Selectable Button Behaviour for Step View
http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?p=169562
----------------------------------------------------------
FTS for Recording Mode
http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?p=169705
----------------------------------------------------------
Send Note Off instead of Note On with velocity 0
http://midibox.org/forums/topic/19471-note-off-hex-80/?p=169684
----------------------------------------------------------


Wishlist for MIDIbox SEQ V4 Plus
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

V4 Plus will require a STM32F4 core which offers much more memory.
Accordingly, resource hungry features could be implemented.

Here a list:

- Expression Layer:
  http://midibox.org/forums/topic/18732-fr-expression-layer/

- Audio metronome function
http://midibox.org/forums/topic/19300-metronome-audio-out-on-stm32f4discovery/